--- a/23.04.14.md
+++ b/23.04.14.md
@@ -165,4 +165,10 @@ function and(a, b) {
 
 ```
 
-[18.](https://edabit.com/challenge/FipbQSYquQLPZ8QXG)
+[18.Fix the Expression](https://edabit.com/challenge/FipbQSYquQLPZ8QXG)\
+
+```js
+function isSeven(x) {
+	return x=== 7
+	
+}
