--- a/23.04.14.md
+++ b/23.04.14.md
@@ -155,11 +155,12 @@ function and(a, b) {
 
 ```
 
-[17.](https://edabit.com/challenge/GwvwXHWCThHZrR7xu)
+[17.Football Points](https://edabit.com/challenge/GwvwXHWCThHZrR7xu)
 
 ```js
-
-
+function footballPoints(wins, draws, losses) {
+	return wins*3+draws
+}
 
 
 
@@ -172,3 +173,4 @@ function isSeven(x) {
 	return x=== 7
 	
 }
+
